<resources>
    <string name="app_name">Quiz App</string>
    <string name="topic">Topic: Technology</string>
    <string name="question_1">Q1) Which of these companies make Graphics Cards?</string>
    <string name="question_2">Q2) Are all computers digital?</string>
    <string name="question_3">Q3) The father of Computers is?</string>
    <string name="question_4">Q4) Which of these Companies develop Computer OSs\'?</string>
    <string name="question_5">Q5) Dynamic R.A.M is more efficient than Static R.A.M</string>
    <string name="question_6">Q6) The revolutionary who created the iPhone is?</string>
    <string name="question_7">Q7) Which of these are Operating Systems?"</string>
    <string name="question_8">Q8) Javascript is an Object Oriented language </string>
    <string name="question_9">Q9) The Creator of the Turin machine is?</string>


    <string name="q1_ch1">Nvidia</string>
    <string name="q1_ch2">AMD</string>
    <string name="q1_ch3">HP</string>
    <string name="q4_ch1">Microsoft</string>
    <string name="q4_ch2">Dell</string>
    <string name="q4_ch3">Apple</string>
    <string name="q7_ch1">RedHat Linux</string>
    <string name="q7_ch2">Ubuntu Linux</string>
    <string name="q7_ch3">Windows</string>


    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="True">True</string>
    <string name="False">False</string>
    <string name="answer">Answer</string>

    <string name="submit">Submit</string>
    <string name="action_reset">reset</string>

</resources>
